--- a/library.html
+++ b/library.html
@@ -48,7 +48,7 @@
     </main>
 
     <footer>
-        &copy; 2023 NGZ. All rights reserved.
+        <p>&copy; 2023 New Gaming Zone. All rights reserved.</p>
     </footer>
 
 </body>
