--- a/library.html
+++ b/library.html
@@ -16,8 +16,8 @@
 
     <nav>
         <a href="index.html">Home</a>
-        <a href="#store">Store</a>
-        <a href="#library" class="active">Library</a>
+        <a href="store.html">Store</a>
+        <a href="library.html" class="active">Library</a>
         <a href="#community">Community</a>
         <a href="#account">Account</a>
     </nav>
