--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
     </header>
 
     <nav>
-        <a href="#home">Home</a>
+        <a href="index.html">Home</a>
         <a href="library.html">Library</a>
-        <a href="#store">Store</a>
+        <a href="store.html">Store</a>
         <a href="#gear">Gear</a>
         <a href="#community">Community</a>
     </nav>
