--- a/library.html
+++ b/library.html
@@ -1,25 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NGZ Library</title>
-    <link rel="stylesheet" href="library.css"> <!-- Link to an external CSS file for styling -->
+    <title>New Gaming Zone</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-image: url('arcade_carpet.jpg'); /* Replace 'arcade_carpet.jpg' with your actual image file */
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            color: #fff;
+        }
+
+        header {
+            background-color: #333;
+            text-align: center;
+            padding: 1em;
+        }
+
+        nav {
+            background-color: #009933; /* Green color for the navbar */
+            text-align: center;
+            padding: 0.5em;
+        }
+
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            padding: 1em;
+            margin: 0 0.5em;
+        }
+
+        main {
+            padding: 1em;
+        }
+
+        footer {
+            background-color: #333;
+            text-align: center;
+            padding: 1em;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+
+        #featured-games {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            margin-top: 20px;
+        }
+
+        .game {
+            width: 30%;
+            margin: 10px;
+            padding: 10px;
+            background-color: rgba(0, 0, 0, 0.7);
+            border-radius: 8px;
+        }
+
+        .game img {
+            width: 100%;
+            border-radius: 5px;
+        }
+    </style>
 </head>
 
 <body>
 
     <header>
-        <h1>NGZ Library</h1>
+        <h1>New Gaming Zone</h1>
     </header>
 
     <nav>
         <a href="index.html">Home</a>
+        <a href="library.html">Library</a>
         <a href="store.html">Store</a>
-        <a href="library.html" class="active">Library</a>
+        <a href="#gear">Gear</a>
         <a href="#community">Community</a>
-        <a href="#account">Account</a>
     </nav>
 
     <main>
