--- a/community.html
+++ b/community.html
@@ -96,9 +96,9 @@
             <h2>Share Your Gaming Moments</h2>
             <div class="moment-gallery">
                 <!-- Add a gallery of shared gaming moments (images or videos) -->
-                <img src="moment1.jpg" alt="Gaming Moment 1">
-                <img src="moment2.jpg" alt="Gaming Moment 2">
-                <img src="moment3.jpg" alt="Gaming Moment 3">
+                <img src="https://www.youtube.com/watch?v=WQHJvGCvcgI" alt="Gaming Moment 1">
+                <img src="https://www.youtube.com/watch?v=0kIh76ctzXs" alt="Gaming Moment 2">
+                <img src="https://www.youtube.com/watch?v=fo3YbmzDPoc" alt="Gaming Moment 3">
                 <!-- Add more gaming moments as needed -->
             </div>
         </section>
