--- a/community.html
+++ b/community.html
@@ -98,7 +98,7 @@
                 <!-- Add a gallery of shared gaming moments (images or videos) -->
                 <img src="https://www.youtube.com/watch?v=WQHJvGCvcgI" alt="Gaming Moment 1">
                 <img src="https://www.youtube.com/watch?v=0kIh76ctzXs" alt="Gaming Moment 2">
-                <img src="https://www.youtube.com/watch?v=fo3YbmzDPoc" alt="Gaming Moment 3">
+                <cv2.imshow("https://www.youtube.com/watch?v=fo3YbmzDPoc", frame)= alt="Gaming Moment 3">
                 <!-- Add more gaming moments as needed -->
             </div>
         </section>
@@ -113,6 +113,7 @@
     <footer>
         &copy; 2023 NGZ. All rights reserved.
     </footer>
+    <link rel="stylesheet" href="community.css">
 
 </body>
 
