--- a/gear.html
+++ b/gear.html
@@ -103,6 +103,7 @@
     <footer>
         &copy; 2023 NGZ. All rights reserved.
     </footer>
+    <link rel="stylesheet" href="gear.css">
 
 </body>
 
