--- a/library.html
+++ b/library.html
@@ -112,6 +112,7 @@
     <footer>
         <p>&copy; 2023 New Gaming Zone. All rights reserved.</p>
     </footer>
+    <link rel="stylesheet" href="library.css">
 
 </body>
 
