--- a/community.html
+++ b/community.html
@@ -82,7 +82,7 @@
         <a href="library.html">Library</a>
         <a href="store.html">Store</a>
         <a href="gear.html">Gear</a>
-        <a href="#community">Community</a>
+        <a href="community.html">Community</a>
     </nav>
 
     <main>
