--- a/gear.html
+++ b/gear.html
@@ -81,7 +81,7 @@
         <a href="index.html">Home</a>
         <a href="library.html">Library</a>
         <a href="store.html">Store</a>
-        <a href="#gear">Gear</a>
+        <a href="gear.html">Gear</a>
         <a href="#community">Community</a>
     </nav>
 
