--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url('arcade_carpet.jpg'); /* Replace 'arcade_carpet.jpg' with your actual image file */
+            background-image: url('https://th.bing.com/th/id/OIP.7ynI5W0xllQ2-LoC-HjUnAHaEK?w=290&h=180&c=7&r=0&o=5&pid=1.7'); /* Replace 'arcade_carpet.jpg' with your actual image file */
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
@@ -149,6 +149,7 @@
     <footer>
         <p>&copy; 2023 New Gaming Zone. All rights reserved.</p>
     </footer>
+    <link rel="stylesheet" href="index.css">
 
 </body>
 
