--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <footer>
         <p>&copy; 2023 New Gaming Zone. All rights reserved.</p>
     </footer>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
 
 </body>
 
