--- a/gear.html
+++ b/gear.html
@@ -103,7 +103,7 @@
     <footer>
         &copy; 2023 NGZ. All rights reserved.
     </footer>
-    <link rel="stylesheet" href="gear.css">
+    <link rel="stylesheet" href="style.css">
 
 </body>
 
