--- a/store.html
+++ b/store.html
@@ -121,7 +121,7 @@
     <footer>
         &copy; 2023 NGZ. All rights reserved.
     </footer>
-    <link rel="stylesheet" href="store.css">
+    <link rel="stylesheet" href="style.css">
 
 </body>
 
