--- a/store.html
+++ b/store.html
@@ -80,8 +80,8 @@
         <a href="index.html">Home</a>
         <a href="library.html">Library</a>
         <a href="store.html">Store</a>
-        <a href="#gear">Gear</a>
-        <a href="#community">Community</a>
+        <a href="gear.html">Gear</a>
+        <a href="community.html">Community</a>
     </nav>
 
     <main>
