--- a/index.html
+++ b/index.html
@@ -112,6 +112,19 @@
         <img src="https://th.bing.com/th/id/OIP.a-HZvX6_yy987ts0kiwBhwHaDt?w=288&h=175&c=7&r=0&o=5&dpr=1.3&pid=1.7" style="width:100%">
         <div class="text">Caption Two</div>
         </div>
+
+        <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+<!-- The dots/circles -->
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+</div>
     
     <div class="mySlides fade">
             <!-- Add more game entries as needed -->
