--- a/index.html
+++ b/index.html
@@ -91,44 +91,40 @@
         </section>
 
         <section id="featured-games">
-            <!-- Slideshow container -->
+<!-- Slideshow container -->
 <div class="slideshow-container">
 
     <!-- Full-width images with number and caption text -->
     <div class="mySlides fade">
-    <div class="numbertext">1 / 3</div>
-    <img src="https://images.wallpapersden.com/image/download/fortnite-chapter-2-season-4_bGdsbmyUmZqaraWkpJRobWllrWdma2U.jpg" style="width:100%">
-    <div class="text">Caption Text</div>
+      <div class="numbertext">1 / 3</div>
+      <img src="img1.jpg" style="width:100%">
+      <div class="text">Caption Text</div>
     </div>
-    
+  
     <div class="mySlides fade">
-    <div class="numbertext">2 / 3</div>
-    <img src="https://th.bing.com/th/id/OIP.JK-Pw-IYekm-zf0g-1qk_AHaEo?w=259&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" style="width:100%">
-    <div class="text">Caption Two</div>
+      <div class="numbertext">2 / 3</div>
+      <img src="img2.jpg" style="width:100%">
+      <div class="text">Caption Two</div>
     </div>
-
+  
     <div class="mySlides fade">
-        <div class="numbertext">2 / 3</div>
-        <img src="https://th.bing.com/th/id/OIP.a-HZvX6_yy987ts0kiwBhwHaDt?w=288&h=175&c=7&r=0&o=5&dpr=1.3&pid=1.7" style="width:100%">
-        <div class="text">Caption Two</div>
-        </div>
-
-        <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
-</div>
-<br>
-
-<!-- The dots/circles -->
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(2)"></span>
-  <span class="dot" onclick="currentSlide(3)"></span>
-</div>
-    
-    <div class="mySlides fade">
-            <!-- Add more game entries as needed -->
-        </section>
+      <div class="numbertext">3 / 3</div>
+      <img src="img3.jpg" style="width:100%">
+      <div class="text">Caption Three</div>
+    </div>
+  
+    <!-- Next and previous buttons -->
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  </div>
+  <br>
+  
+  <!-- The dots/circles -->
+  <div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+  </div>
 
         <!-- Placeholder sections for Library, Store, Gear, and Community -->
         <section id="library">
