--- a/index.html
+++ b/index.html
@@ -97,19 +97,19 @@
     <!-- Full-width images with number and caption text -->
     <div class="mySlides fade">
       <div class="numbertext">1 / 3</div>
-      <img src="img1.jpg" style="width:100%">
+      <img src="https://images.wallpapersden.com/image/download/fortnite-chapter-2-season-4_bGdsbmyUmZqaraWkpJRobWllrWdma2U.jpg" style="width:100%">
       <div class="text">Caption Text</div>
     </div>
   
     <div class="mySlides fade">
       <div class="numbertext">2 / 3</div>
-      <img src="img2.jpg" style="width:100%">
+      <img src="https://th.bing.com/th/id/OIP.JK-Pw-IYekm-zf0g-1qk_AHaEo?w=259&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" style="width:100%">
       <div class="text">Caption Two</div>
     </div>
   
     <div class="mySlides fade">
       <div class="numbertext">3 / 3</div>
-      <img src="img3.jpg" style="width:100%">
+      <img src="https://th.bing.com/th/id/OIP.a-HZvX6_yy987ts0kiwBhwHaDt?w=288&h=175&c=7&r=0&o=5&dpr=1.3&pid=1.7" style="width:100%">
       <div class="text">Caption Three</div>
     </div>
   
