--- a/library.html
+++ b/library.html
@@ -72,16 +72,44 @@
 
 <body>
 
-    <header>
-        <h1>New Gaming Zone</h1>
-    </header>
 
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="library.html">Library</a>
-        <a href="store.html">Store</a>
-        <a href="gear.html">Gear</a>
-        <a href="community.html">Community</a>
+    <nav class="top-naviagation">
+        <ul class="fire_games-nav" role="navigation">
+            <li class="fire_games_logo">
+                <a href="#">
+                    <i class="fas fa-fire"></i> New Gaming Zone
+                </a>
+            </li>
+            <li class="fire_games_search">
+                <input placeholder="Search Games..." />
+                <i class="fas fa-search"></i>
+            </li>
+            <li class="cats">
+                <a href="index.html">
+                     Home
+                </a>
+            </li>
+            <li class="cats">
+                <a href="library.html">
+                    <i class="fas fa-globe"></i> Library
+                </a>
+            </li>
+            <li class="cats">
+                <a href="newstore.html">
+                    <i class="fas fa-globe"></i> Store
+                </a>
+            </li>
+            <li class="cats">
+                <a href="gear.html">
+                    <i class="fas fa-globe"></i> Gear
+                </a>
+            </li>
+            <li class="cats">
+                <a href="community.html">
+                    <i class="fas fa-globe"></i> Community
+                </a>
+            </li>
+        </ul>
     </nav>
 
     <main>
@@ -113,6 +141,7 @@
         <p>&copy; 2023 New Gaming Zone. All rights reserved.</p>
     </footer>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="newstore.css">
 
 </body>
 
