--- a/index.html
+++ b/index.html
@@ -1,9 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <nav class="top-naviagation">
+        <ul class="fire_games-nav" role="navigation">
+            <li class="fire_games_logo">
+                <a href="#">
+                    <i class="fas fa-fire"></i> New Gaming Zone
+                </a>
+            </li>
+            <li class="fire_games_search">
+                <input placeholder="Search Games..." />
+                <i class="fas fa-search"></i>
+            </li>
+            <li class="cats">
+                <a href="index.html">
+                     Home
+                </a>
+            </li>
+            <li class="cats">
+                <a href="library.html">
+                    <i class="fas fa-globe"></i> Library
+                </a>
+            </li>
+            <li class="cats">
+                <a href="newstore.html">
+                    <i class="fas fa-globe"></i> Store
+                </a>
+            </li>
+            <li class="cats">
+                <a href="gear.html">
+                    <i class="fas fa-globe"></i> Gear
+                </a>
+            </li>
+            <li class="cats">
+                <a href="community.html">
+                    <i class="fas fa-globe"></i> Community
+                </a>
+            </li>
+            <li class="register" id="register" onclick="onProgress();">
+                <a href="login.html">Register</a>
+            </li>
+            <li class="login" id="login" onclick="onProgress();">
+                <a href="login.html">Log in</a>
+            </li>
+            <li>
+                <a href="#"></a>
+            </li>
+        </ul>
+    </nav>
     <title>New Gaming Zone</title>
     <style>
         body {
@@ -68,102 +115,192 @@
             border-radius: 5px;
         }
     </style>
-</head>
 
-<body>
 
-    <header>
-        <h1>New Gaming Zone</h1>
-    </header>
+        
+    
 
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="library.html">Library</a>
-        <a href="store.html">Store</a>
-        <a href="gear.html">Gear</a>
-        <a href="community.html">Community</a>
-    </nav>
-
-    <main>
         <section id="home">
-            <h2>Welcome to NGZ</h2>
+            <h2>-</h2>
+            <h2></h2>
+            <h2></h2>
+            <h1>Welcome to NGZ</h1>
             <p>Discover the latest and greatest games in the New Gaming Zone.</p>
         </section>
 
         <section id="featured-games">
-<!-- Slideshow container -->
+            <main>
+            <body>
+            <!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {box-sizing: border-box}
+body {font-family: Verdana, sans-serif; margin:0}
+.mySlides {display: none}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
+}
+</style>
+</head>
+<body>
+
 <div class="slideshow-container">
 
-    <!-- Full-width images with number and caption text -->
-    <div class="mySlides fade">
-      <div class="numbertext">1 / 3</div>
-      <img src="https://images.wallpapersden.com/image/download/fortnite-chapter-2-season-4_bGdsbmyUmZqaraWkpJRobWllrWdma2U.jpg" style="width:100%">
-      <div class="text">Caption Text</div>
-    </div>
-  
-    <div class="mySlides fade">
-      <div class="numbertext">2 / 3</div>
-      <img src="https://th.bing.com/th/id/OIP.JK-Pw-IYekm-zf0g-1qk_AHaEo?w=259&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" style="width:100%">
-      <div class="text">Caption Two</div>
-    </div>
-  
-    <div class="mySlides fade">
-      <div class="numbertext">3 / 3</div>
-      <img src="https://th.bing.com/th/id/OIP.a-HZvX6_yy987ts0kiwBhhwHaDt?w=288&h=175&c=7&r=0&o=5&dpr=1.3&pid=1.7" style="width:100%">
-      <div class="text">Caption Three</div>
-    </div>
-  
-    <!-- Next and previous buttons -->
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-  </div>
-  <br>
-  
-  <!-- The dots/circles -->
-  <div style="text-align:center">
-    <span class="dot" onclick="currentSlide(1)"></span>
-    <span class="dot" onclick="currentSlide(2)"></span>
-    <span class="dot" onclick="currentSlide(3)"></span>
-  </div>
+<div class="mySlides fade">
+  <div class="numbertext">1 / 3</div>
+  <img src="https://th.bing.com/th/id/OIP.qphHR-U0mhrwpgO6ympdvgHaEH?pid=ImgDet&w=187&h=98.175&c=7&dpr=1.3" style="width:100%">
+  <div class="text">Fortnite</div>
+</div>
 
-        <!-- Placeholder sections for Library, Store, Gear, and Community -->
-        <section id="library">
-            <h2>Game Library</h2>
-            <p>Explore your game library and discover new titles.</p>
-        </section>
+<div class="mySlides fade">
+  <div class="numbertext">2 / 3</div>
+  <img src="https://th.bing.com/th/id/OIP.4p9KCky72rgr9Kift_aV7wHaEK?pid=ImgDet&w=187&h=105.1875&c=7&dpr=1.3" style="width:100%">
+  <div class="text">Call of Duty</div>
+</div>
 
-        <section id="store">
-            <h2>Game Store</h2>
-            <p>Shop for the latest games and gear in our online store.</p>
-        </section>
+<div class="mySlides fade">
+  <div class="numbertext">3 / 3</div>
+  <img src="https://th.bing.com/th/id/OIP.a-HZvX6_yy987ts0kiwBhwHaDt?pid=ImgDet&w=187&h=105.1875&c=7&dpr=1.3" style="width:100%">
+  <div class="text">Valorant</div>
+</div>
 
-        <section id="gear">
-            <h2>Gaming Gear</h2>
-            <p>Upgrade your gaming setup with our high-quality gear.</p>
-        </section>
+<a class="prev" onclick="plusSlides(-1)">❮</a>
+<a class="next" onclick="plusSlides(1)">❯</a>
 
-        <section id="community">
-            <h2>Community</h2>
-            <p>Connect with fellow gamers in our vibrant community.</p>
-        </section>
+</div>
+<br>
 
-        <section id="about">
-            <h2>About Us</h2>
-            <p>NGZ is dedicated to providing a platform for gamers to connect and enjoy the best gaming experience.</p>
-            <!-- Add more information about NGZ and its mission here -->
-        </section>
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span> 
+  <span class="dot" onclick="currentSlide(2)"></span> 
+  <span class="dot" onclick="currentSlide(3)"></span> 
+</div>
 
-        <section id="contact">
-            <h2>Contact Us</h2>
-            <p>Have questions or suggestions? Reach out to us!</p>
-            <!-- Add a contact form or contact information here -->
-        </section>
-    </main>
+<script>
+let slideIndex = 1;
+showSlides(slideIndex);
+
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  let i;
+  let slides = document.getElementsByClassName("mySlides");
+  let dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1}    
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";  
+  }
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " active";
+}
+</script>
+
+</body>
+</html> 
+</body>
+</main>
 
     <footer>
         <p>&copy; 2023 New Gaming Zone. All rights reserved.</p>
     </footer>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="newstore.css">
 
 </body>
 
