I finished at 5 AM

--- a/gear.html
+++ b/gear.html
@@ -113,26 +113,56 @@
         </ul>
     </nav>
 
-
-    <main>
-        <section id="bestEquipment">
-            <h2>Best Gaming Equipment</h2>
-            <div class="equipment-carousel">
-                <!-- Add carousel content here (e.g., equipment images) -->
-                <img src="keyboard1.jpg" alt="Gaming Keyboard 1">
-                <img src="mouse1.jpg" alt="Gaming Mouse 1">
-                <img src="headset1.jpg" alt="Gaming Headset 1">
-                <img src="chair1.jpg" alt="Gaming Chair 1">
-                <!-- Add more carousel items as needed -->
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>NGZ Gear Showcase</title>
+        <!-- Add your CSS link for styling here -->
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+    <p>-</p>
+    <p>-</p>
+    <div class="gear-showcase">
+        <h2>NGZ's Finest Gaming Gear</h2>
+        <div class="gear-carousel">
+            <!-- Add images and information for each gaming gear item -->
+            <div class="gear-item">
+                <img src="https://th.bing.com/th/id/OIP.oIHIBrpPgpOuIm_bjQalSQHaE8?w=276&h=184&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="Gaming Keyboard">
+                <p>Gaming Keyboard</p>
             </div>
-        </section>
-    </main>
+            <div class="gear-item">
+                <img src="https://th.bing.com/th/id/OIP.tkYUnTpWukziBFR_Uji6MwHaEK?w=333&h=187&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="Gaming Mouse">
+                <p>Gaming Mouse</p>
+            </div>
+            <div class="gear-item">
+                <img src="https://th.bing.com/th/id/OIP.Iz2pXmBvJ3KyaU0-gm0WEAHaHa?w=202&h=202&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="Gaming Headset">
+                <p>Gaming Headset</p>
+            </div>
+            <div class="gear-item">
+                <img src="https://th.bing.com/th/id/OIP.AjsByajabZit2GNZgorWqAHaHa?w=213&h=213&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="Gaming Chair">
+                <p>Gaming Chair</p>
+            </div>
+            <!-- Add more gear items as needed -->
+        </div>
+    </div>
+    
+    <!-- Add your JavaScript link for carousel functionality here -->
+    <script src="gear.js"></script>
+    </body>
+    </html>
+    
 
     <footer>
         &copy; 2023 NGZ. All rights reserved.
     </footer>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="newstore.css">
+    <link rel="stylesheet" href="gear.css">
+    <link rel="stylesheet" href="gear.js">
+
 
 </body>
 
