--- a/library.html
+++ b/library.html
@@ -112,25 +112,28 @@
         </ul>
     </nav>
 
+
     <main>
         <section id="library">
             <h2>My Library</h2>
             <div class="game">
-                <img src="game1.jpg" alt="Game 1">
+                <img src="https://th.bing.com/th/id/OIP.VdzXhHTL1o8PLeV7d2rNgwHaEK?w=297&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="Game 1">
                 <h3>Awesome Game 1</h3>
-                <p>Description of Awesome Game 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p>"1v1.LOL" is an online multiplayer building and shooting game where players engage in one-on-one battles, building structures to gain advantages and eliminate opponents in a fast-paced environment. </p>
             </div>
 
             <div class="game">
-                <img src="game2.jpg" alt="Game 2">
+                <img src="https://th.bing.com/th/id/OIP.uv47fi4i16P5BP2PM6DjCgHaEK?w=282&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="Game 2">
                 <h3>Cool Game 2</h3>
-                <p>Description of Cool Game 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p>
+                    Apex Legends is a free-to-play battle royale game where legendary characters with unique abilities form squads to compete for supremacy in a vibrant and evolving sci-fi universe.</p>
             </div>
 
             <div class="game">
-                <img src="game3.jpg" alt="Game 3">
+                <img src="https://th.bing.com/th/id/OIP.I7s8_iiZNO9-0LMRECw4wQHaE0?pid=ImgDet&w=187&h=111.79029733959311&c=7&dpr=1.3" alt="Game 3">
                 <h3>Exciting Game 3</h3>
-                <p>Description of Exciting Game 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p>
+                    Elden Ring is an action role-playing game set in a dark fantasy world, combining the rich lore crafted by George R. R. Martin with the challenging gameplay and intricate level design from the creators of Dark Souls.</p>
             </div>
 
             <!-- Add more game entries as needed -->
@@ -142,6 +145,7 @@
     </footer>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="newstore.css">
+
 
 </body>
 
