--- a/index.html
+++ b/index.html
@@ -234,19 +234,19 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="https://th.bing.com/th/id/OIP.qphHR-U0mhrwpgO6ympdvgHaEH?pid=ImgDet&w=187&h=98.175&c=7&dpr=1.3" style="width:100%">
+  <img src="https://th.bing.com/th/id/OIP.nWZLep5ipMpPVNX6wnRhYAHaEc?pid=ImgDet&w=187&h=105.1875&c=7&dpr=1.3" style="width:800px;height:425px;">
   <div class="text">Fortnite</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="https://th.bing.com/th/id/OIP.4p9KCky72rgr9Kift_aV7wHaEK?pid=ImgDet&w=187&h=105.1875&c=7&dpr=1.3" style="width:100%">
+  <img src="https://th.bing.com/th/id/OIP.4p9KCky72rgr9Kift_aV7wHaEK?pid=ImgDet&w=187&h=105.1875&c=7&dpr=1.3" style="width:800px;height:425px;">
   <div class="text">Call of Duty</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="https://th.bing.com/th/id/OIP.a-HZvX6_yy987ts0kiwBhwHaDt?pid=ImgDet&w=187&h=105.1875&c=7&dpr=1.3" style="width:100%">
+  <img src="https://th.bing.com/th/id/OIP.a-HZvX6_yy987ts0kiwBhwHaDt?pid=ImgDet&w=187&h=105.1875&c=7&dpr=1.3" style="width:800px;height:425px;">
   <div class="text">Valorant</div>
 </div>
 
@@ -290,6 +290,7 @@ function showSlides(n) {
   dots[slideIndex-1].className += " active";
 }
 </script>
+
 
 </body>
 </html> 
